2003-05-30  Miguel de Icaza  <miguel@ximian.com>

	* XmlReader.cs (ReadStartElement): Improve error message.  

2003-05-28  Lluis Sanchez Gual <lluis@ideary.com>

	* XmlTextReader.cs : MoveToAttribute methods must set the enumerator to the right
	  position, since MoveToNextAttribute may be called after it. 
	  SetProperties(): attributes do not "inherit" the namespace.
	* XmlDocument.cs: ReadNode(), ReadAttributeNode(): must keep the current reader position.

2003-05-27  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* NameTable.cs : Add() sets the given name string interned.
	* XmlParserContext.cs : added internal PushScope() and PopScope() to
	  hold stacks of xml:base, xml:lang and xml:space.
	* XmlTextReader.cs : implemented XmlLang and XmlSpace (only as a
	  property for stacked attributes). Renamed Initialize() to Initialize-
	  Context(). Modified to use XmlParserContext.PushScope()/PopScope().

2003-05-26  Lluis Sanchez Gual <lluis@ximian.com>

	* XmlReader.cs: Little fix to WriteAttributeString()

2003-05-24  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlAttribute.cs, XmlCharacterData.cs, XmlComment.cs, XmlDocument.cs,
	  XmlDocumentFragment.cs, XmlElement.cs, XmlEntity.cs, XmlLinkedNode.cs,
	  XmlNode.cs, XmlNotation.cs, XmlProcessingInstruction.cs, XmlReader.cs,
	  XmlSignificantWhitespace.cs, XmlText.cs, XmlWhitespace.cs:
	  Reverted the recent accessibility mistake (5/16).
	* XmlDocument.cs, XmlNode.cs : moved actual CreateNavigator() logic 
	  from XmlNode to XmlDocument.

2003-05-18  Lluis Sanchez Gual <lluis@ideary.com>

	* XmlQualifiedName.cs : Fixed bug in equality operator.

2003-05-18  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlTextWriter.cs : patch by Jonathan Hogg. Flush() does not close
	  any open attributes or elements. WriteWhitespace() checks state and
	  closes start tag.  Fixed WriteStringInternal() to replace CR/LF chars
	  when it is called inside attribute value.
	* XmlException.cs : added .NET 1.1 .ctor.